# metheus

./: .gitignore  CLAUDE.md  CONSTITUTION.md  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  ChatRoom.tsx  ConsoleWorkflowPanel.tsx  ExecutionTree.tsx  ExistingBaselinePanel.tsx  FileTree.tsx  FloatingChatBalloon.tsx  MilestoneReviewPanel.tsx  PauseDecisionPanel.tsx  PlanApprovalPanel.tsx  PreflightPanel.tsx  ProjectEntry.tsx  RollbackImpactDialog.tsx  TaskConsole.tsx  autopilotPolicy.test.ts  autopilotPolicy.ts  constants.ts  enginePolicy.test.ts  enginePolicy.ts  logPolicy.test.ts  logPolicy.ts  managedFlowPolicy.test.ts  managedFlowPolicy.ts  types.ts  workspacePolicy.test.ts  workspacePolicy.ts
src-tauri/: CONSTITUTION.md  Cargo.toml  tauri.conf.json
src-tauri/crates/metheus-grok-engine/: Cargo.toml
src-tauri/crates/metheus-grok-engine/src/: config.rs  error.rs  event_bridge.rs  lib.rs  model_adapter.rs  runtime.rs
src-tauri/src/: acceptance.rs  api.rs  constants.rs  constitution.rs  constitution_context.rs  diff.rs  executor.rs  git_ops.rs  json_utils.rs  lib.rs  main.rs  pipeline.rs  plan_calibration.rs  plan_compiler.rs  plan_contract.rs  project.rs  project_facts.rs  prompts.rs  recovery.rs  recovery_checkpoint.rs  recovery_learning.rs  settings.rs  snapshot.rs  test_runner.rs
src-tauri/src/commands/: chat.rs  checks.rs  milestone.rs  mod.rs  plan.rs  project_analysis.rs  project_ops.rs  settings.rs  workflow.rs
src-tauri/src/engine/: builtin.rs  claude_code.rs  codex.rs  contract.rs  failure_classifier.rs  grok_cli.rs  health.rs  kimi_cli.rs  mod.rs  process_runner.rs  service.rs
src/components/: ActionButton.tsx  ApplicationSettings.tsx  AutopilotControlBar.tsx  ConsoleStepShell.tsx  DecisionStepHeader.tsx  EmptyState.tsx  ExecutionEngineSelector.tsx  ExecutionEngineSettings.tsx  FeedbackBanner.tsx  IconButton.tsx  Modal.tsx  StatusBadge.tsx  (+2 more)
(+10 files in other folders)
