[package]
name = "metheus"
version = "0.0.2"
description = "A Tauri App"
authors = ["entzauberung"]
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "metheus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] } 
dirs = "5"
walkdir = "2"
chrono = "0.4"
sha2 = "0.10"
metheus-grok-engine = { path = "crates/metheus-grok-engine" }
keyring = "4.1.5"

[workspace]
members = [".", "crates/metheus-grok-engine"]
resolver = "2"
